Adding default NPI code for practice

--- a/config/popHealth.yml
+++ b/config/popHealth.yml
@@ -50,6 +50,9 @@ defaults: &defaults
     2.16.840.1.113883.3.526.3.1174:
       code: "854901"
       codeSystem: "2.16.840.1.113883.6.88"
+  default_practice_npi: 12345
+  default_practice_tin: 
+  default_practice_ccn: 12345
   # QRDA CMS program
     # VALUES:
     # CMS REPORTING PROGRAM (DEFAULT): NONE
